2018-08-15  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/texi2any.pl: Do not check for module files relative to the
	installed location.

2018-08-15  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/ModulePath.pm.in: Do not account for the case of 
	one of $top_builddir and $top_srcdir being set but not the 
	other.

2018-08-15  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/XS/Makefile.am: Do not install TestXS.pm, as this 
	is useless.

2018-08-15  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/texi2any.pl: Only call fileparse once (used for both 
	finding modules and translation files).  Do not add a directory 
	to @INC that Texinfo::ModulePath takes care of adding.  Add a 
	comment.

2018-08-14  Gavin Smith  <gavinsmith0123@gmail.com>

	* autogen.sh: Initialise tp/Texinfo/XS directory.

2018-08-14  Gavin Smith  <gavinsmith0123@gmail.com>

	* configure.ac (xs_srcdir): Update path from XS builddir to 
	srcdir.
	* tp/Texinfo/XS/fail.pl: update path to TestXS module.

2018-08-14  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/XS/Makefile.am (modulesdir): Change to new 
	location.
	(CLEANFILES, EXTRA_DIST, xs_LTLIBRARIES): Add MiscXS files.
	(MiscXS_la_CFLAGS): Define.

	* tp/Texinfo/MiscXS/MiscXS.pm,
	* tp/Texinfo/MiscXS/miscxs.h,
	* tp/Texinfo/MiscXS/misc.c: Move to tp/Texinfo/XS.
	* tp/Texinfo/MiscXS: Remove subdirectory.

	* tp/Texinfo/ModulePath.pm.in: Refer to Texinfo/XS instead of 
	Texinfo/MiscXS.

	* tp/Makefile.am (SUBDIRS, DIST_SUBDIRS): Remove Texinfo/MiscXS.
	* configure.ac: Do not configure in tp/Texinfo/MiscXS.

2018-08-14  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/XSParagraph, tp/Texinfo/XS:
	Move subdirectory. This is intended to be a subdirectory for all 
	XS modules and to remove the duplication that exists between
	tp/Texinfo/Convert/XSParagraph and tp/Texinfo/MiscXS.

	* configure.ac,
	* tp/Makefile.am,
	* tp/Texinfo/Convert/Paragraph.pm,
	* tp/Texinfo/ModulePath.pm.in,